--- a/Google_API_O_I_O_I/app/src/main/res/layout/contain_main.xml
+++ b/Google_API_O_I_O_I/app/src/main/res/layout/contain_main.xml
@@ -6,24 +6,27 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:id="@+id/LinearLayout1"
-    >
+    android:background="@drawable/bg">
     <fragment
         android:layout_width="match_parent"
-        android:layout_height="450dp"
+        android:layout_height="match_parent"
         android:id="@+id/map"
         tools:context=".MapsActivity"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="14dp"
-        />
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="100dp" />
     <Button android:text = "顯示"
         android:id="@+id/btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_below="@+id/map"
-        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="40dp"
         />
 
 </RelativeLayout>
