--- a/Google_API_O_I_O_I/app/src/main/res/values/styles.xml
+++ b/Google_API_O_I_O_I/app/src/main/res/values/styles.xml
@@ -8,4 +8,10 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="MyStyle" parent="Theme.AppCompat.Light.DarkActionBar" >
+        <item name="colorPrimary">@android:color/holo_red_dark</item>
+        <item name="android:navigationBarColor">@android:color/holo_red_dark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
 </resources>
