--- a/Google_API_O_I_O_I/app/src/main/res/values/colors.xml
+++ b/Google_API_O_I_O_I/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="淺橘色">#ffdf99</color>
+    <color name="淺橘透明">#78ffffff</color>
+    <color name="primary_material_light_1">#58c75c</color>
+    <color name="primary_material_light_2">#4caf50</color>
 </resources>
