--- a/Google_API_O_I_O_I/app/src/main/res/layout/contain_main.xml
+++ b/Google_API_O_I_O_I/app/src/main/res/layout/contain_main.xml
@@ -29,4 +29,25 @@
         android:layout_marginBottom="40dp"
         />
 
+    <EditText
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text="Lat"
+        android:ems="10"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/map"
+        android:layout_marginStart="17dp"
+        android:id="@+id/testLatInput"
+        android:layout_width="150dp" />
+
+    <EditText
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text="Lng"
+        android:ems="10"
+        android:id="@+id/testLngInput"
+        android:layout_alignParentTop="true"
+        android:layout_alignEnd="@+id/map" />
+
 </RelativeLayout>
