--- a/Google_API_O_I_O_I/app/src/main/res/values/colors.xml
+++ b/Google_API_O_I_O_I/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="淺橘透明">#78ffffff</color>
     <color name="primary_material_light_1">#58c75c</color>
     <color name="primary_material_light_2">#4caf50</color>
+    <color name="ToolBarColor">#b4972626</color>
 </resources>
