--- a/Google_API_O_I_O_I/app/src/main/res/layout/activity_setting2.xml
+++ b/Google_API_O_I_O_I/app/src/main/res/layout/activity_setting2.xml
@@ -17,28 +17,6 @@
         android:inputType="textPersonName"
         android:text="Name"
         android:ems="8"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="100dp"
-        android:id="@+id/editText01" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:text="Name"
-        android:ems="8"
-        android:id="@+id/editText02"
-        android:layout_alignBaseline="@+id/textView02"
-        android:layout_alignBottom="@+id/textView02"
-        android:layout_alignParentEnd="true" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:text="Name"
-        android:ems="8"
         android:id="@+id/editText03"
         android:layout_alignBaseline="@+id/textView03"
         android:layout_alignBottom="@+id/textView03"
@@ -53,23 +31,26 @@
         android:layout_alignStart="@+id/editText01"
         android:layout_marginTop="27dp"
         android:id="@+id/editText00" />
+
     <TextView
-        android:text="提示訊息內容"
+        android:text="下拉訊息內容"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="51dp"
-        android:id="@+id/textView02"
-        android:layout_below="@+id/editText01"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="26dp" />
-    <TextView
-        android:text="道路判斷距離"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/textView01"
+        android:layout_marginTop="42dp"
+        android:id="@+id/textView00" />
+
+    <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:id="@+id/textView03"
-        android:layout_below="@+id/editText02"
-        android:layout_alignStart="@+id/textView02" />
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:ems="8"
+        android:layout_marginTop="12dp"
+        android:id="@+id/editText01"
+        android:layout_below="@+id/editText00"
+        android:layout_alignParentEnd="true" />
 
     <TextView
         android:text="提示訊息標題"
@@ -80,29 +61,90 @@
         android:layout_alignBottom="@+id/editText01"
         android:layout_alignStart="@+id/textView02" />
 
-    <TextView
-        android:text="下拉訊息內容"
+    <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/textView01"
-        android:layout_marginTop="42dp"
-        android:id="@+id/textView00" />
-    <Button
-        android:text="儲存設定"
-        android:layout_width="250dp"
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:ems="8"
+        android:id="@+id/editText02"
+        android:layout_alignBaseline="@+id/textView02"
+        android:layout_alignBottom="@+id/textView02"
+        android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:text="道路判斷距離"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="26dp"
+        android:id="@+id/textView03"
+        android:layout_below="@+id/editText02"
+        android:layout_alignStart="@+id/textView02" />
+
+    <TextView
+        android:text="提示訊息內容"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
+        android:id="@+id/textView02"
+        android:layout_marginStart="27dp"
+        android:layout_below="@+id/editText01"
+        android:layout_alignParentStart="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:ems="10"
+        android:id="@+id/editText04"
+        android:layout_marginTop="11dp"
         android:layout_below="@+id/editText03"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="46dp"
-        android:id="@+id/button4" />
+        android:layout_alignStart="@+id/editText03" />
+
+    <TextView
+        android:text="連線IP"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView3"
+        android:layout_alignBaseline="@+id/editText04"
+        android:layout_alignBottom="@+id/editText04"
+        android:layout_alignStart="@+id/textView03" />
+
+    <TextView
+        android:text="Port"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/editText04"
+        android:layout_alignStart="@+id/textView3"
+        android:layout_marginTop="23dp"
+        android:id="@+id/textView4" />
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:ems="10"
+        android:layout_below="@+id/editText04"
+        android:layout_alignStart="@+id/editText04"
+        android:layout_marginTop="12dp"
+        android:id="@+id/editText05" />
     <Button
         android:text="回復預設值"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:id="@+id/button5"
         android:layout_below="@+id/button4"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignStart="@+id/button4" />
+
+    <Button
+        android:text="儲存設定"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/button4"
+        android:layout_below="@+id/editText05"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp" />
 
 
 </RelativeLayout>
