--- a/Google_API_O_I_O_I/app/src/main/res/anim/bounce.xml
+++ b/Google_API_O_I_O_I/app/src/main/res/anim/bounce.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android" >
-
+    <!--for redbutton-->
     <scale
         android:duration="2000"
         android:fromXScale="0.9"
