--- a/Google_API_O_I_O_I/app/src/main/res/values/colors.xml
+++ b/Google_API_O_I_O_I/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="primary_material_light_1">#58c75c</color>
     <color name="primary_material_light_2">#4caf50</color>
     <color name="ToolBarColor">#b4972626</color>
+    <color name="hintBtn_Color">#b43f3d3d</color>
 </resources>
