--- a/Google_API_O_I_O_I/app/src/main/res/drawable/login_button_selector.xml
+++ b/Google_API_O_I_O_I/app/src/main/res/drawable/login_button_selector.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--ㄧ般按鈕按下的動畫-->
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@drawable/clr_normal" android:state_pressed="false"/>
     <item android:drawable="@drawable/clr_pressed" android:state_pressed="true"/>
