--- a/Google_API_O_I_O_I/app/src/main/res/layout/activity_setting2.xml
+++ b/Google_API_O_I_O_I/app/src/main/res/layout/activity_setting2.xml
@@ -8,7 +8,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="net.macdidi.google_api_o_i_o_i.SettingActivity">
+    tools:context="net.macdidi.google_api_o_i_o_i.SettingActivity"
+    >
 
 
     <EditText
