--- a/Google_API_O_I_O_I/app/src/main/res/layout/activity_choose_client.xml
+++ b/Google_API_O_I_O_I/app/src/main/res/layout/activity_choose_client.xml
@@ -6,18 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="net.macdidi.google_api_o_i_o_i.MainActivity"
-    android:background="@drawable/bg">
-    <TextView
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:text="Time is Life"
-        android:id="@+id/app_name"
-        android:gravity="center"
-        android:layout_marginTop="100dp"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentTop="true"
-        android:textSize="40sp"
-        android:textColor="@android:color/holo_green_light" />
+    android:background="@drawable/bg1">
+
     <TextView
         android:text="道路避讓即時警示系統"
         android:layout_width="wrap_content"
@@ -25,60 +15,41 @@
         android:id="@+id/textView"
         android:layout_below="@+id/app_name"
         android:layout_centerHorizontal="true"
-        android:textSize="20sp" />
-    <TextView
-        android:text="請選擇您的身份:"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView1"
-        android:layout_below="@+id/textView"
-        android:layout_marginTop="18dp"
-        android:layout_centerHorizontal="true"
         android:textSize="20sp"
-        android:textStyle="normal|bold" />
-    <Button
-        android:text=""
-        android:id="@+id/button6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent = "true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="80dp"
-        android:background="@drawable/choose_ambulance_client"
-        />
+        android:textColor="@android:color/black" />
 
     <Button
         android:text=""
-        android:id="@+id/button7"
+        android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent = "true"
-        android:layout_alignParentRight="true"
         android:layout_marginRight="80dp"
-        android:background="@drawable/choose_car_client"/>
+        android:background="@drawable/icon"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
     <TextView
-        android:text="救護車"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/button7"
-        android:layout_centerInParent = "true"
-        android:layout_marginTop="10dp"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="93dp"
-        android:textSize="20sp"
-        android:id="@+id/textView6" />
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:text="Time is Life"
+        android:id="@+id/app_name"
+        android:gravity="center"
+        android:layout_marginTop="48dp"
+        android:textSize="40sp"
+        android:textColor="@color/淺橘透明"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:textStyle="normal|bold" />
 
     <TextView
-        android:text="一般駕駛"
+        android:text="SYNC IN PROGRESS.."
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/button6"
-        android:layout_centerInParent = "true"
-        android:layout_marginTop="10dp"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="85dp"
-        android:textSize="20sp"
-        android:id="@+id/textView5"
-         />
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="76dp"
+        android:id="@+id/textView6"
+        android:textStyle="normal|bold"
+        android:textColor="@color/wallet_hint_foreground_holo_light" />
+
 </RelativeLayout>
